# youtui

./: Cargo.toml  README.md
docs/plans/: 2026-02-10-background-playback-design.md  2026-02-10-background-playback-implementation.md  2026-02-10-rich-tui-design.md  2026-02-10-rich-tui-implementation.md  2026-02-10-settings-screen-design.md  2026-02-10-settings-screen-implementation.md  2026-02-11-automatic-dependency-installation-design.md  2026-02-11-automatic-dependency-installation-implementation.md
src/: cleanup.rs  cli.rs  config.rs  deps.rs  display.rs  ipc.rs  main.rs  player.rs  player_manager.rs  queue.rs  search.rs
src/ui/: app.rs  events.rs  layout.rs  mod.rs  runner.rs  terminal.rs
