[package]
name = "yt-search-play"
version = "2.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
tempfile = "3"
ctrlc = "3"
anyhow = "1"
which = "7"
ratatui = "0.26"
crossterm = "0.27"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
